// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter with nested Context components properly renders the right nested context 1`] = `
<div>
  child222 (to be rendered)
</div>
`;

exports[`Filter with non nested Context does not render if no contexts would pass and there is no default context 1`] = `null`;

exports[`Filter with non nested Context renders the context that passes even if it comes after the default context 1`] = `
<div>
  To be rendered
</div>
`;

exports[`Filter with non nested Context renders the context that passes even if there is a default context 1`] = `
<div>
  To be rendered
</div>
`;

exports[`Filter with non nested Context renders the default context if no contexts would pass 1`] = `
<div>
  Default Filter Content
</div>
`;

exports[`Filter with non nested Context renders the first context that passes 1`] = `
<div>
  To be rendered
</div>
`;
